@@ -1,3 +1,3 @@
 package ifneeded platform        1.0.2 [list source [file join $dir platform.tcl]]
-package ifneeded platform::shell 1.1.1 [list source [file join $dir shell.tcl]]
+package ifneeded platform::shell 1.1.2 [list source [file join $dir shell.tcl]]
 
